--- a/estilo/style.css
+++ b/estilo/style.css
@@ -17,10 +17,11 @@
 }
 
 body{
-  background-image: url(../imagens/background.png);
+  background-image: url('../imagens/background.png');
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  background-attachment: fixed;
+  height: 100vh;
 }
 
 .cabecalho{
