--- a/estilo/style.css
+++ b/estilo/style.css
@@ -29,6 +29,7 @@ body{
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  max-height: 60px;
 }
 
 .cabecalho > a > img.logo{
@@ -37,7 +38,7 @@ body{
 
 nav.midia-social{
   display: flex;
-  gap: 32px;
+  column-gap: 32px;
 }
 
 
@@ -65,8 +66,8 @@ img.icons:hover{
   align-items: center;
   justify-content: space-around;
   padding: 10px;
-  margin-bottom: 40px;
-  gap: 20px;
+  margin-bottom: 35px;
+  column-gap: 20px;
 }
 
 .conteudo-central > .left > .conteudo-central-escrito > h1{
@@ -110,8 +111,8 @@ img.icons:hover{
   flex-direction: column;
   align-items: center;
   gap: 22px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 35px;
+  margin-bottom: 35px;
 }
 
 .conteudo-secundario > h2{
@@ -128,7 +129,7 @@ img.icons:hover{
 
 
 footer{
-  padding: 10px;
+  padding: 5px;
   border-top: 0.5px solid #ffcaca;
 }
 
