--- a/estilo/style.css
+++ b/estilo/style.css
@@ -17,9 +17,7 @@
 }
 
 body{
-  background-image: url('../imagens/background.png');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: linear-gradient(68.15deg, #27191b 16.62%, #501616 85.61%);
   background-attachment: fixed;
   height: 100vh;
 }
@@ -52,7 +50,6 @@ img.icons{
 img.icons:hover{
   border: 2px solid rgba(255, 255, 255, 0.274) ;
   transform: translate(-2px, -2px);
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   transition: transform 0.2s, border 0.2s;
 }
 
